erDiagram
    CHANNELS ||--o{ VIDEOS : "chứa"
    CHANNELS ||--o{ MEMBERSHIP_TIERS : "cung cấp"
    CHANNELS ||--o{ CHANNEL_MEMBERSHIPS : "có hội viên"
    CATEGORIES ||--o{ VIDEOS : "phân loại"
    MEMBERSHIP_TIERS ||--o{ CHANNEL_MEMBERSHIPS : "xác định cấp độ"
    VIDEOS ||--o{ VIDEO_UNLOCKS : "được mua đứt bởi"
    VIDEOS ||--o{ VIDEO_VIEWS : "ghi nhận lượt xem"
    VIDEOS ||--o{ VIDEO_PROGRESS : "lưu tiến trình xem"

    CATEGORIES {
        uuid id PK
        string name "VD: Âm nhạc, Giải trí, Khác"
        string slug UK
        string description
    }

    CHANNELS {
        uuid id PK
        uuid owner_id "Ref: Identity DB"
        string name
        string slug UK
        string description
        string avatar_url
        string banner_url
        timestamp created_at
    }

    VIDEOS {
        uuid id PK
        uuid channel_id FK
        uuid category_id FK "Bắt buộc - Not Null"
        string title
        string description
        string status "DRAFT, PROCESSING, PUBLIC, FAILED"
        string raw_file_key
        string master_playlist_url
        int required_tier_level "0=Free, 1=Silver..."
        decimal price_coin "0 nếu chỉ cho hội viên"
        boolean is_purchasable
        int view_count "Bộ đệm tổng view"
        timestamp published_at
    }

    MEMBERSHIP_TIERS {
        uuid id PK
        uuid channel_id FK
        string name "VD: Vàng, Bạc, Đồng"
        int level_weight "Quyền ưu tiên: 1, 2, 3..."
        decimal price_per_month
        boolean is_active "Cờ Soft-delete"
    }

    CHANNEL_MEMBERSHIPS {
        uuid id PK
        uuid user_id "Ref: Identity DB"
        uuid channel_id FK
        uuid tier_id FK
        timestamp valid_until "Ngày hết hạn"
        string status "ACTIVE, EXPIRED"
    }

    VIDEO_UNLOCKS {
        uuid id PK
        uuid user_id "Ref: Identity DB"
        uuid video_id FK
        uuid transaction_ref_id "Ref: Finance DB"
        timestamp purchased_at
    }

    VIDEO_VIEWS {
        uuid id PK
        uuid video_id FK
        uuid user_id "Ref: Identity DB (Có thể Null)"
        string ip_address "Dùng để chặn Spam"
        timestamp watched_at
    }

    VIDEO_PROGRESS {
        uuid id PK
        uuid user_id "Ref: Identity DB"
        uuid video_id FK
        float current_time "Số giây đã xem"
        float duration "Tổng thời lượng video"
        timestamp last_watched_at
    }